fixed modal style on small displays

--- a/revolv/static/modal.scss
+++ b/revolv/static/modal.scss
@@ -30,6 +30,12 @@
     border-radius: 3px;
     background-color: white;
 
+    @media #{$small-only} {
+        width: 100% !important;
+        height: 100% !important;
+        border-radius: none !important;
+    }
+
     .modal-header {
         background-color: $revolv-light-blue-bg;
         height: $revolv-header-height * (5/6);
